v2.0/developer/IDE-integration.md
---
lastmod: 2018-11-02
old_version: true
date: 2017-01-21
linktitle: IDE integration
title: IDE integration
weight: 20
notoc: true
images:
  - /images/documentation/velonetics-ide-integration.png
skip_header_image: true
menu:
  community_v2.0:
    parent: "140 Developer Tools"
meta:
  since: v2.0
  source: https://github.com/velonetics/velonetics-schema

---
Automatic validation as you type, showing documentation while hovering an attribute, explanation of errors, and autocompletion of properties, are features that you get automatically while working with Velonetics.

For users of **Visual Studio Code**, **Android Studio**, **JetBrains** editors (PHPStorm, PyCharm, GoLand, WebStorm, IntelliJ IDEA...), **Eclipse**, and other IDEs that have built-in json schema validation capabilities, there is nothing to install to have these features. Other editors can be used as well, but you will likely need to instal a JSON schema validator.

This is how it could look like:

![Visual Code integration](/images/documentation/velonetics-ide-integration.png)

## Editor integration for Velonetics files
Velonetics has published an updated JSON-schema definition ([source](https://github.com/velonetics/velonetics-schema)) to validate configuration files from your IDE automatically. The editors with built-in json-schema validation will offer this feature **without installing any additional plugin**. All you need to do, is add in the beginning of your `velonetics.json` configuration file a line specifing the schema:


{{< highlight json >}}
{
    "$schema": "https://www.velonetics.io/schema/v3.json"
}
{{< /highlight >}}

There is nothing else you need to do!